src/assets/styles/setings/_typography.scss
.display {
  font-family: $font-cormorant-regular;
  font-weight: 500;
  @include font-size(95px);
  @include line-height(70px);
  letter-spacing: -1px;
  text-transform: uppercase;
  word-break: break-all;
}


.h1 {
  font-family: $font-cormorant-regular;
  @include font-size(58px);
  @include line-height(60px);
  letter-spacing: -0.01em;
  text-transform: uppercase;
  margin: 0;
  word-break: break-all;
}

.h2 {
  /* H2 */

  font-family: $font-cormorant-regular;
  @include font-size(48px);
  @include line-height(52px);
  letter-spacing: -0.01em;
  color: $dark;
  word-break: break-all;
}

.h3, .h3 > .link {
  font-family: $font-cormorant-bold;
  @include font-size(30px);
  @include line-height(34px);
  margin: 0;
}

.h4, .h4 > .link {
  font-family: $font-cormorant-bold;
  @include font-size(28px);
  @include line-height(30px);
  margin: 0;
}

.h5 {
  font-family: $font-cormorant-regular;
  @include font-size(24px);
  @include line-height(27px);
  margin: 0;
}

.paragraph-2 {
  font-family: $font-acari-regular;
  @include font-size(17px);
  @include line-height(27px);
  letter-spacing: 0.01em;
  opacity: 0.9;
}

.paragraph-3 {
  font-family: $font-acari-regular;
  @include font-size(15px);
  @include line-height(24px);
  letter-spacing: 0.01em;
  opacity: 0.9;
}

.subtitle {
  font-family: $font-acari-bold;
  @include font-size(18px);
  @include line-height(18px);
  text-align: center;
  letter-spacing: 0.5px;
  text-transform: uppercase;

  &__sm {
    @include font-size(14px);
    @include line-height(42px);
    text-align: center;
    letter-spacing: 0.5px;

    .link {
      @include line-height(38px);
    }
  }
}


.h-sup {
  font-family: $font-acari-bold;
  @include font-size(12px);
  @include line-height(16px);
  letter-spacing: 1px;
  text-transform: uppercase;
  color: rgba(39, 35, 35, 0.5);
}

